.metadata/.plugins/org.eclipse.cdt.ui/Module12_PorkerGame.build.log
00:58:53 **** Incremental Build of configuration Debug for project Module12_PorkerGame ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Deck.o" "..\\src\\Deck.cpp" 
..\src\Deck.cpp:26:2: warning: identifier 'nullptr' is a keyword in C++11 [-Wc++0x-compat]
  srand (time(nullptr));
  ^
..\src\Deck.cpp:24:2: error: 'Card' does not name a type
  Card *deck;
  ^
..\src\Deck.cpp:26:9: error: 'time' is not a type
  srand (time(nullptr));
         ^
..\src\Deck.cpp: In constructor 'Deck::Deck()':
..\src\Deck.cpp:31:3: error: 'deck' was not declared in this scope
   deck = new Card[NUMBER_OF_CARDS];
   ^
..\src\Deck.cpp:31:14: error: 'Card' does not name a type
   deck = new Card[NUMBER_OF_CARDS];
              ^
..\src\Deck.cpp:34:53: error: 'Card' was not declared in this scope
    deck[i] = Card(rankList[i % 13], suitList[i / 13]);
                                                     ^
..\src\Deck.cpp: In member function 'void Deck::printDeck()':
..\src\Deck.cpp:45:12: error: 'deck' was not declared in this scope
    cout << deck[i].printCard() << " ";
            ^

00:58:53 Build Finished (took 360ms)

